Sun, May 18, 2025, 6:44 PM -04:00

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(#00bfff, #ffffff);
+    background: linear-gradient(#840f8b, #ffffff);
     height: 100%;
 }
 
