Sun, May 18, 2025, 6:55 PM -04:00

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(#720a74, #4654c4);
+    background: linear-gradient(#720a74, #4c35c6);
     height: 100%;
 }
 
