--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@ body {
     height: 100%;
 }
 
+  .footer {
+    background: white;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 -10px 20px -10px rgba(0, 0, 0, 0.3); /* shadow at top of footer */
+  }
