--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     text-align: center;
     box-shadow: 0 -10px 20px -10px rgba(0, 0, 0, 0.3); /* shadow at top of footer */
   }
-p {
+{
   border: 1px solid gray;
   padding: 8px;
 }
