--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
     box-shadow: 0 -10px 20px -10px rgba(0, 0, 0, 0.3); /* shadow at top of footer */
   }
 .meow{
-  border: 5px solid gray;
-  
+  border: 5px solid black;
+
   padding: 8px;
 }
 
